--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -5,9 +5,9 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #ffabc7   ;
+  --secondary-color: #9562A3 ;
+  --accent1-color: #2D1B81;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
