--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -6,24 +6,24 @@ Fonts are separated by a | */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #ffabc7   ;
-  --secondary-color: #9562A3 ;
-  --accent1-color: #2D1B81;
-  --accent2-color: white;
+  --secondary-color:#2D1B81;
+  --accent1-color:#9562A3;
+  --accent2-color: #5339c7;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #2D1B81;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --paragraph-background-color: #2D1B81;
+  --nav-link-color: #5339c7;
+  --nav-background-color: #2D1B81;
+  --nav-hover-link-color: #9562A3;
+  --nav-hover-background-color: #c582d8d5;
 }
 
 
